--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "commander": "^2.19.0"
   },
   "devDependencies": {},
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Junikorn/dodocker.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
